add complete raffle-method which displays text or gif based on user input

--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>L1 1DV610</title>
-    <script type="module" src="funkyGreet.js"></script>
+    <script type="module" src="raffle.js"></script>
     <link href="/src/style.css" rel="stylesheet">
 </head>
 <body class="flex flex-col items-center ">
     <h1 class="mb-20">Welcome back to school!</h1>
-    <!-- TODO: add onClick property on input element -->
     <legend class="mb-10 text-2xl">Enter your name for a chance to win a secret prize in our raffle!</legend>
-    <input class="border p-1 m-1" type="text" autofocus value="Your name..." maxlength="30">
+    <input id="input-field" class="border p-1 m-1" type="text" autofocus value="Your name..." maxlength="30">
 </body>
 </html>
